crates/carta/tests/snapshots/golden_writer__docbook__common__blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<blockquote>
  <para>
    quoted
  </para>
  <para>
    more lines here
  </para>
</blockquote>
