crates/carta/tests/snapshots/golden_writer__docbook__common__bullet-list-tight.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<itemizedlist spacing="compact">
  <listitem>
    <para>
      a
    </para>
  </listitem>
  <listitem>
    <para>
      b
    </para>
  </listitem>
  <listitem>
    <para>
      c
    </para>
  </listitem>
</itemizedlist>
