crates/carta/tests/snapshots/golden_writer__docbook__common__bullet-nested.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<itemizedlist>
  <listitem>
    <para>
      outer
    </para>
    <itemizedlist spacing="compact">
      <listitem>
        <para>
          inner one
        </para>
      </listitem>
      <listitem>
        <para>
          inner two
        </para>
      </listitem>
    </itemizedlist>
  </listitem>
</itemizedlist>
