crates/carta/tests/snapshots/golden_writer__docbook__common__citation.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  see [@knuth1984] for details
</para>
