crates/carta/tests/snapshots/golden_writer__docbook__common__cluster-wrap.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  Clusters measure one glyph wide: 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 and the
  wide glyphs 一二三 take two columns each, while ́abc opens a word with
  a mark.
</para>
