crates/carta/tests/snapshots/golden_writer__docbook__common__code-block-id.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<programlisting>
plain code
</programlisting>
