crates/carta/tests/snapshots/golden_writer__docbook__common__code-block-indented.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<programlisting>
indented code
second line
</programlisting>
