crates/carta/tests/snapshots/golden_writer__docbook__common__code-block-lang.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<programlisting language="rust">
let s = &quot;hi&quot;;
x &lt; y &amp;&amp; y &gt; z
</programlisting>
