crates/carta/tests/snapshots/golden_writer__docbook__common__code-block-numbered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<programlisting language="python">
print(1)
print(2)
</programlisting>
