crates/carta/tests/snapshots/golden_writer__docbook__common__code-block-trailing-newline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<programlisting>
first line
second line
</programlisting>
