crates/carta/tests/snapshots/golden_writer__docbook__common__code-span-space-padded.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  <literal> x </literal>
</para>
<para>
  <literal> </literal>
</para>
<para>
  <literal>`x</literal>
</para>
